fixed the white space at the bottom on mobile

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1015,7 +1015,7 @@
 }
 
 #homeWhiteSpace {
-  height: 60px;
+  height: 100px;
 }
 /* -------------------------------------------------------------------------- */
 
@@ -1077,6 +1077,10 @@
 
 .aboutUsWhiteSpace {
   height: 40px;
+}
+
+#aboutUsWhiteSpaceBottom {
+  height: 50px;
 }
 /* -------------------------------------------------------------------------- */
 
@@ -1195,7 +1199,7 @@
 }
 
 #ourProvidersWhiteSpace {
-  height: 40px;
+  height: 80px;
 }
 /* -------------------------------------------------------------------------- */
 
@@ -1324,7 +1328,7 @@ ubTitle {
 }
 
 #privacyWhiteSpace {
-  height: 40px;
+  height: 80px;
 }
 /* -------------------------------------------------------------------------- */
 
@@ -1495,7 +1499,7 @@ ubTitle {
 }
 
 #contactUsWhiteSpace {
-  height: 40px;
+  height: 80px;
 }
 /* -------------------------------------------------------------------------- */
 
